# kursowaya_oop

./: .gitignore  main.py  pyproject.toml  vacancy.json
src/: abstract_classes.py  classes.py  file_request.py
